assets/css/homepage.css
body {
    font-family: 'Roboto', 'Lato', sans-serif;
    background-color: white;
    text-align: center;
}

#logo {
    float: left;
    font-size: 40px;
}


#menu {
    font-size: 30px;
    margin: 2px;
    padding: 2px;
    border: none;
    font-family: 'Lato', sans-serif;
    letter-spacing: 4px;
}

#menu li {
    margin: 0 30px 0 0;
    padding: 0;
    border: none;
    float: right;
    list-style-type: none;
}


#hero-image {
    height: 100%;
    width: 100%;
    margin: 0;
    background: url("../imgs/hero-image-horse.jpg") no-repeat center center;
}

#hero-outer {
    height: 600px;
    width: 100%;
    overflow: hidden;
    animation-name: zoom;
    animation-duration: 5s;
    animation-fill-mode: forwards;
    position: relative;
}

@keyframes zoom {
    from {
        transform: scale(1);
    }

    to {
        transform: scale(1.1);
    }
}



#cover-text,
h2 {
    color: white;
}

#cover-text {
    float: right;
    font-size: 120%;
    font-family: 'Roboto';
    font-weight: 800;
    text-transform: uppercase;
    letter-spacing: 4px;
    text-align-last: left;
    width: max-content;
    height: min-content;
    padding: 0;
    margin: 0;
    background-color: rgb(64, 119, 201);
    opacity: .7;
    bottom: 30px;
    right: 150px;
    position: absolute;
}

#about {
    color: #3a3a3a;
    font-family: 'Roboto';
}

#about-left, #about-right, #about-center {
    width: 33%;
}


#about-center>img {
    width: 60%;
    border-radius: 40%;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

hr {
    border-top: 1px solid #3a3a3a;
    width: 100%;
    margin: 5px 0;
}


.about-flex {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
    align-items: center;
}

#times {
    border: 3px gray solid;
    background-image: url('../imgs/HD-wallpaper-horseback-riding-riders-equine-beautiful-horse-riding-animal-graphy-wide-screen.jpg');
    background-size: cover;
    background-position: center;
    overflow: hidden;
}

#times div {
    color: white;
    background-color: rgba(0, 0, 0, 0.6);
    width: 20%;
    height: 300px;
    float: left;
    padding: 30px 0 0 10px;
    text-align: center;
    border: 2px solid white;
    box-sizing: border-box;
}

#times > h2, h3 {
    color: white;
    font-size: 14px;
}

footer>p {
    color: black;
}

a {
    text-decoration: none;
    color: white;
}

a:visited {
    color: white;
    text-decoration: none;
    text-transform: lowercase;
    font-weight: 900;
}

footer {
    width: 100%;
    background-color: #525252;
    text-align: center;
    text-transform: uppercase;
    text-decoration: none;
    margin: 0;
}

/* For mobile */
@media screen and (max-width:350px) {
    body {
        padding: 5px;
    }

    #times {
        margin-top: 70px;
        font-size: x-small;
    }

    .hero-image,
    .cover-text {
        width: 50%;
        height: 50%;
        padding-top: 50px;
        margin-top: 50%;
    }

    #logo {
        font-size: smaller;
        padding-bottom: 20px;
        float: left;
    }

    #menu li {
        margin-bottom: 20px;
        padding-bottom: 20px;
    }

    #cover-text {
        float: right;
        width: min-content;
        height: fit-content;
    }
}

@media screen and (max-width:1200px) {
    body {
        width: 100%;
    }
}

